# flightProject

./: DataSource.py  FlightParser.py  FlightawareDataSource.py  Flightradar24apiDataSource.py  README.md  log.txt  logLastDepartmentSVO.py  svoParser.py  test1.py
Parsing/: DataSource.py  FlightawareParcer.py  Flightradar24apiParser.py
c++/: CMakeLists.txt  Flight.cpp  Flight.h  IBaseField.cpp  IBaseField.h  IRecordedField.cpp  IRecordedField.h  Plane.cpp  Position.h  RecorderFieldsManager.cpp  RecorderFieldsManager.h  Sector.h  Table.cpp  Table.h  test  test.cpp
c++/Controllers/: ModelController.cpp  ModelController.h
c++/DataBaseManagers/: IDataBaseManager.cpp  IDataBaseManager.h
c++/Models/: Flight.cpp  Flight.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Position.cpp  Position.h  Sector.h
c++/dao/: SqlDao.cpp  SqlDao.h  SqlDaoImpl.cpp  SqlDaoImpl.h
c++/methods/: Methods.cpp  Methods.h
c++/models/: Flight.cpp  Flight.h  Plane.cpp  Plane.h  Position.cpp  Position.h  Sector.cpp  Sector.h
c++/models/base.model/: Model.cpp  Model.h
c++/models/table/: Table.cpp  Table.h
c++/serialization/sql/: RecordedField.cpp  RecordedField.h  RecordedFieldImpl.cpp  RecordedFieldImpl.h  SqlSerialiseManager.cpp  SqlSerialiseManager.h  SqlSerializator.cpp  SqlSerializator.h  qw.cpp  qw.h
c++/service/: TableChangeService.cpp  TableChangeService.h
c++/types/: PlaneType.cpp  PlaneType.h  PositionType.cpp  PositionType.h  PrimaryType.cpp  PrimaryType.h  Type.cpp  Type.h
calculation.noise/cpp/: CMakeLists.txt  main.cpp
calculation.noise/cpp/algorithms/: Algorithms.cpp  Algorithms.h
calculation.noise/cpp/arguments.parser/: ArgumentsParser.cpp  ArgumentsParser.h
calculation.noise/cpp/console/: ConsolePrinter.cpp  ConsolePrinter.h
calculation.noise/cpp/image.generator/: ColorArgument.cpp  ColorArgument.h  PngGenerator.cpp  PngGenerator.h  SvgGenerator.cpp  SvgGenerator.h
calculation.noise/cpp/models/: FlightFrame.cpp  FlightFrame.h  Point.cpp  Point.h  Sector.cpp  Sector.h  SectorBunch.cpp  SectorBunch.h  SectorNoise.cpp  SectorNoise.h
calculation.noise/cpp/text.parser/: FlightsLogParser.cpp  FlightsLogParser.h
calculation.noise/cpp/variables/: Variables.cpp  Variables.h
data/sheremetyego/: coords
flightradar.parser/: RealTimeParser.py  parser.py
parsing/: DataSource.py  FlightRadar24Filter.py  FlightawareParcer.py  Flightradar24apiParser.py
png.generator/: generatePng.py
scripts/: logInfoOfAllCurrentFlights.py  logLastDepartmentSVO.py  requirements.txt
sheremetyego.parser/: RealTimeParser.py  parser.py
sqlite3_realisation/: CMakeLists.txt  main.cpp
